--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -120,7 +120,7 @@ whether a weapon will be found on a stopped individual who is frisked or searche
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other
 algorithms:~\footnote{We use standard R packages, with default parameter settings, for the first seven.}
-logistic regression, support vector machines, AdaBoost, CART, C4.5, random forests, RIPPER,~\footnote{We were unable to execute RIPPER for the NYCLU problem.} and scalable rule lists (SBRL).~\footnote{https://github.com/Hongyuy/sbrlmod}
+logistic regression, support vector machines, AdaBoost, CART, C4.5, random forests, RIPPER,~\footnote{We were unable to execute RIPPER for the NYCLU problem.} and scalable Bayesian rule lists (SBRL).~\footnote{https://github.com/Hongyuy/sbrlmod}
 %
 Figure~\ref{fig:rule-list} shows an  optimal rule list that CORELS learns
 for the ProPublica dataset.
@@ -140,16 +140,6 @@ for CORELS and other tree (CART, C4.5) and rule list (RIPPER, SBRL) learning alg
 %
 In both contexts, CORELS can learn short rule lists without sacrificing accuracy.
 
-In the remainder, we show results using the ProPublica dataset.
-%
-Figure~\ref{fig:objective} illustrates how both the objective and the size of
-the remaining search space decrease as CORELS executes.
-The objective drops quickly, achieving the optimal value within 10 seconds.
-CORELS certifies optimality in less than 6 minutes --
-the objective lower bound of the remaining search space
-monotonically converges to the optimal objective
-as the search space steadily shrinks.
-
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
@@ -164,7 +154,7 @@ as the search space steadily shrinks.
 \caption{Executions of CORELS with (solid lines) and without
 (dashed lines) the equivalent points bound (Theorem~\ref{thm:identical}).
 %
-Horizontal axes plot wall clock time (log scale).
+%Horizontal axes plot wall clock time (log scale).
 %
 Top: Objective value (thin solid line) and lower bound (thick solid line) for CORELS.
 %as a function of wall clock time (log scale).
@@ -205,7 +195,7 @@ support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
 symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
 lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+equivalent pts bound & $>$134 & $>$7168 & $>$800 & $>$789 & $\ge$10
 \end{tabular}
 }
 \vspace{5mm}
@@ -220,19 +210,30 @@ that each remove a specific implementation optimization or bound.
 %
 %(We are not measuring the cumulative effects of removing a sequence of components.)
 %
-All rows represent complete executions, except for the final row,
-in which each execution was terminated %due to memory constraints,
+%All rows represent complete executions, except for the final row,
+%in which each execution was terminated %due to memory constraints,
 %once the size of the cache reached ${8 \times 10^8}$ elements,
-after consuming 390-410GB RAM.
+%after consuming 390-410GB RAM.
+Note that the last row did not terminate.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
 in the final row, we report thresholds that reflect minimum values across folds. %\\
 %
-*~Only 4 out of 10 folds achieve the optimum.
+%*~Only 4 out of 10 folds achieve the optimum.
 }
 \label{tab:ablation}
 \end{table}
+
+In the remainder, we show results using the ProPublica dataset.
+%
+Figure~\ref{fig:objective} illustrates how both the objective and the size of
+the remaining search space decrease as CORELS executes.
+The objective drops quickly, achieving the optimal value within 10 seconds.
+CORELS certifies optimality in less than 6 minutes --
+the objective lower bound of the remaining search space
+monotonically converges to the optimal objective
+as the search space steadily shrinks.
 
 Finally, we determine the efficacy of each of our data structure and bounding
 optimizations.
