Remove a line or two

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -151,7 +151,7 @@ In both contexts, CORELS can learn short rule lists without sacrificing accuracy
 \includegraphics[trim={20mm, 25mm, 24mm, 15mm}, width=0.45\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{kdd}
 \end{center}
-\caption{Executions of CORELS with (solid lines) and without
+\caption{CORELS with (solid lines) and without
 (dashed lines) the equivalent points bound (Theorem~\ref{thm:identical}).
 %
 %Horizontal axes plot wall clock time (log scale).
