--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1603,7 +1603,7 @@ which is smaller by a factor of about~360,000.
 %
 % ELA : someone please double-check these numbers :)
 
-While a number like~$10^{24}$ seems infeasibly enormous,
+While ~$10^{24}$ seems infeasibly enormous,
 it does not represent the number of rule lists we evaluate.
 %
 As we show in ~(\S\ref{sec:experiments}),
@@ -1618,8 +1618,8 @@ ${K=10}$ rules represents a (heuristic) upper limit on
 the size of an interpretable rule list,
 and ${M=1000}$ represents the approximate number of rules
 with sufficiently high support (Theorem~\ref{thm:min-capture})
-we expect to obtain via rule mining~(\S\ref{sec:setup}),
-for many datasets that might be used for constructing interpretable models.
+we expect to obtain via rule mining~(\S\ref{sec:setup}).
+%for many datasets that might be used for constructing interpretable models.
 
 \begin{arxiv}
 \subsection{Similar support bound}
