Fixed compile errors

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -60,7 +60,7 @@ __author={Hongyu Yang and Cynthia Rudin and Margo Seltzer},
 
 @inproceedings{GarofalakisHyRaSh00,
 __author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
-author = {Garofalakis, M. and Hyun, D, and Rastogi, R, and Shim, K.},
+author = {M. Garofalakis and D. Hyun and R. Rastogi and K. Shim},
  title = {Efficient Algorithms for Constructing Decision Trees with Constraints},
  booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'98)}},
  year = {2000},
@@ -585,7 +585,7 @@ journal = {Thorax}
 %% http://mekentosj.com/papers/
 
 @article{Holte93,
-__author=	{Robert C. Holte}
+__author=	{Robert C. Holte},
 author=	{R. C. Holte}
 ,title=		{Very simple classification rules perform well on most
 		 commonly used datasets}
