Combine last 2 paragraphs of 3.8

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1602,8 +1602,13 @@ about~${9.6 \times 10^{29}}$ to about~${2.7 \times 10^{24}}$,
 which is smaller by a factor of about~360,000.
 %
 % ELA : someone please double-check these numbers :)
+\begin{arxiv}
 
-While ~$10^{24}$ seems infeasibly enormous,
+\end{arxiv}
+\begin{kdd}
+%
+\end{kdd}
+While~$10^{24}$ seems infeasibly enormous,
 it does not represent the number of rule lists we evaluate.
 %
 As we show in ~(\S\ref{sec:experiments}),
