Removed first names

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -40,8 +40,8 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
 
 
 @article{LethamRuMcMa15,
-    author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan},
-__author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
+__author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan},
+author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
     title     = {Interpretable classifiers using rules and {B}ayesian analysis: {B}uilding a better stroke prediction model},
    journal="Annals of Applied Statistics",
      year      = "2015",
@@ -215,7 +215,8 @@ url="http://dx.doi.org/10.1007/978-3-7091-2668-4_10"
 }
 @article{Ruping06,
 title={Learning Interpretable Models},
-author="Stefan Ruping",
+__author="Stefan Ruping",
+author="S. Ruping",
 journal={},
 year={2006}
 }
@@ -635,7 +636,7 @@ volume = {6},
 pages = {652--668}
 }
 @article{Dension:1998hl,
-author = {Dension, D and Mallick, B and Smith, A.F.M.},
+author = {Dension, D. and Mallick, B. and Smith, A.F.M.},
 title = {{A Bayesian CART algorithm}},
 journal = {Biometrika},
 year = {1998},
@@ -670,7 +671,8 @@ pages = {2864--2870}
 
 
 @article{Schmueli10,
-    author = {Shmueli, Galit},
+__author = {Shmueli, Galit},
+author = {Shmueli, G.},
     issn = {0883-4237},
     journal = {Statistical Science},
     keywords = {prediction, statistics},
@@ -798,7 +800,8 @@ year = {2003}
 }
 
 @article{Li01,
- author = {Wenmin Li and Jiawei Han and Jian Pei},
+__author = {Wenmin Li and Jiawei Han and Jian Pei},
+author = {W. Li and J. Han and J. Pei},
  title = {{CMAR}: accurate and efficient classification based on multiple class-association rules},
  journal = {IEEE International Conference on Data Mining},
  year = {2001},
@@ -934,7 +937,8 @@ pages = {587--602}
 }
 
 @InProceedings{Sokolova03,
-author = {Marina Sokolova and Mario Marchand and Nathalie Japkowicz and John Shawe-Taylor},
+__author = {Marina Sokolova and Mario Marchand and Nathalie Japkowicz and John Shawe-Taylor},
+author = {M. Sokolova and M. Marchand and N. Japkowicz and J. Shawe-Taylor},
 title = {The Decision List Machine},
 booktitle = {Advances in Neural Information Processing Systems},
 series = {NIPS '03},
@@ -961,7 +965,8 @@ volume = {19}
 }
 
 @Article{Marchand05,
-author = {Mario Marchand and Marina Sokolova},
+__author = {Mario Marchand and Marina Sokolova},
+author = {M. Marchand and M. Sokolova},
 title = {Learning with decision lists of data-dependent features},
 journal = {Journal of Machine Learning Research},
 year = {2005},
@@ -1285,7 +1290,8 @@ author = {Leo Breiman}
 
 
 @article{Huysmans11,
-  Author = {Huysmans, Johan and Dejaeger, Karel and Mues, Christophe and Vanthienen, Jan and Baesens, Bart},
+__Author = {Huysmans, Johan and Dejaeger, Karel and Mues, Christophe and Vanthienen, Jan and Baesens, Bart},
+Author = {Huysmans, J. and Dejaeger, K. and Mues, C. and Vanthienen, J. and Baesens, B.},
   Journal = {Decision Support Systems},
   Number = {1},
   Pages = {141--154},
@@ -1295,7 +1301,8 @@ author = {Leo Breiman}
 }
 
 @article{Freitas14,
-  Author = {Freitas, Alex A},
+__Author = {Freitas, Alex A},
+Author = {Freitas, A. A},
   Journal = {ACM SIGKDD Explorations Newsletter},
   Number = {1},
   Pages = {1--10},
@@ -1315,7 +1322,8 @@ author = {Leo Breiman}
 }
 
 @article{Chipman10,
-  Author = {Hugh A. Chipman and Edward I. George and Robert E. McCulloch},
+__Author = {Hugh A. Chipman and Edward I. George and Robert E. McCulloch},
+Author = {H. A. Chipman and E. I. George and R. E. McCulloch},
   Journal = {The Annals of Applied Statistics},
   Volume = {4},
   Number = {1},
@@ -1364,13 +1372,15 @@ year = {2007}
 }
 
 @article{goodman2016eu,
-	Author = {Goodman, Bryce and Flaxman, Seth},
+__Author = {Goodman, Bryce and Flaxman, Seth},
+Author = {Goodman, B. and Flaxman, S.},
 	Journal = {arXiv preprint arXiv:1606.08813},
 	Title = {{EU} regulations on algorithmic decision-making and a ``right to explanation"},
 	Year = {2016}}
 
 @inproceedings{ripper,
-author={William W. Cohen},
+__author={William W. Cohen},
+author={W. W. Cohen},
 title={Fast Effective Rule Induction},
 booktitle={Twelfth International Conference on Machine Learning {(ICML)}}, 
 pages={115--123}, 
