--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -331,7 +331,8 @@ year={2015}
 }
 
 @TECHREPORT{Bennett96optimaldecision,
-    author = {Kristin P. Bennett and Jennifer A. Blue},
+__author = {Kristin P. Bennett and Jennifer A. Blue},
+author = {K. P. Bennett and J. A. Blue},
     title = {Optimal Decision Trees},
     institution = {R.P.I. Math Report No. 214, Rensselaer Polytechnic Institute},
     year = {1996}
@@ -474,7 +475,8 @@ author={C. Rudin and B. Letham and D. Madigan},
 
 @phdthesis{ruping2006learning,
   title={Learning interpretable models},
-  author={R{\"u}ping, Stefan},
+__author={R{\"u}ping, Stefan},
+author={R{\"u}ping, S.},
   year={2006},
   school={Universit{\"a}t Dortmund}
 }
@@ -791,7 +793,8 @@ year = {2003}
  }
 
 @inproceedings{Liu98,
- author = {Bing Liu and Wynne Hsu and Yiming Ma},
+__author = {Bing Liu and Wynne Hsu and Yiming Ma},
+author = {B. Liu and W. Hsu and Y. Ma},
  title = {Integrating classification and association rule mining},
  booktitle = {Proceedings of the 4th International Conference on Knowledge Discovery and Data Mining},
  series={KDD '98},
@@ -809,7 +812,8 @@ author = {W. Li and J. Han and J. Pei},
  }
 
 @inproceedings{Yin03,
- author = {Xiaoxin Yin and Jiawei Han},
+__author = {Xiaoxin Yin and Jiawei Han},
+author = {X. Yin and J. Han},
  title = {CPAR: classification based on predictive association rules},
  booktitle = {Proceedings of the 2003 SIAM International Conference on Data Mining},
  series={ICDM '03},
@@ -905,7 +909,8 @@ pages = {121-167}
 }
 
 @Book{Breiman84,
-author = {Leo Breiman and Jerome H. Friedman and Richard A. Olshen and Charles J. Stone},
+__author = {Leo Breiman and Jerome H. Friedman and Richard A. Olshen and Charles J. Stone},
+author = {L. Breiman and J. H. Friedman and R. A. Olshen and C. J. Stone},
 title = {Classification and Regression Trees},
 publisher = {Wadsworth},
 year = {1984}
@@ -994,7 +999,8 @@ pages = {427--451}
 }
 
 @Inproceedings{Vanhoof10,
-  author={Koen Vanhoof and Beno\^{i}t Depaire},
+__author={Koen Vanhoof and Beno\^{i}t Depaire},
+author={K. Vanhoof and B. Depaire},
   booktitle={Proceedings of the International Conference on Intelligent Systems and Knowledge Engineering},
   series={ISKE '10},
   title={Structure of association rule classifiers: a review},
@@ -1090,7 +1096,8 @@ pages = {2049--2072}
 }
 
 @Book{Quinlan93,
-author = {J. Ross Quinlan},
+__author = {J. Ross Quinlan},
+author = {J. R. Quinlan},
 title = {C4.5: Programs for Machine Learning},
 publisher = {Morgan Kaufmann},
 year = {1993}
