Removed white space below table

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -223,6 +223,7 @@ in the final row, we report the minimum values across folds. %\\
 %*~Only 4 out of 10 folds achieve the optimum.
 }
 \label{tab:ablation}
+\vspace{-8mm}
 \end{table}
 
 %In the remainder, we show results using the ProPublica dataset.
