Lightly revised abstract based on feedback from Daniel et al

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,12 +1,13 @@
-We present the design and implementation of a custom discrete optimization technique for building rule lists that
-are certifiably optimal over a categorical feature space.
+We present the design and implementation of a custom discrete optimization
+technique for building rule lists over a categorical feature space.
 %
-By leveraging algorithmic bounds, efficient data structures, and computational
-reuse,
-we achieve several orders of magnitude speedup in time
+Our algorithm provides the optimal solution, with a certificate of optimality.
+%
+By leveraging algorithmic bounds, efficient data structures,
+and computational reuse, we achieve several orders of magnitude speedup in time
 and a massive reduction of memory consumption.
 %
 We demonstrate that our approach produces optimal rule lists on practical
-problems in a matter of seconds.
+problems in seconds.
 %
-This approach provides an alternative to CART and other decision tree methods.
+This framework is a novel alternative to CART and other decision tree methods.
