--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -137,7 +137,7 @@
 % We no longer use \terms command
 %\terms{Theory}
 
-\keywords{Rule lists, Decision trees, Optimization}
+\keywords{Rule lists, Decision trees, Optimization, Interpretable models}
 
 \maketitle
 
