--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -165,7 +165,18 @@ Each node in the prefix tree represents an individual rule;
 thus, each path in the tree represents a rule list such that
 the final node in the path contains metrics about that rule list.
 %
-This tree structure facilitates the use of multiple different selection algorithms including breadth-first search, a priority queue whose priority metric is customizable, and a stochastic selection process. In addition, we are able to limit the number of nodes in the tree and thereby achieve a way of tuning space-time tradeoffs in a robust manner. This tree structure is a useful way of organizing the generation of rule lists and should be parallelizable.
+This tree structure, together with a search policy and sometimes a queue,
+enables a variety of strategies, including breadth-first,
+best-first, and stochastic search.
+%
+In particular, we can design different best-first strategies
+by customizing the priority metric of a priority queue.
+%
+In addition, we are able to limit the number of nodes in the tree
+and thereby enable tuning of space-time tradeoffs in a robust manner.
+%
+This tree structure is a useful way of organizing the generation
+and evaluation of rule lists, and should be parallelizable.
 
 \begin{arxiv}
 We evaluated CORELS on a number of publicly available datasets and have made code for our algorithm and experiments publicly available. Our metric of success was 10-fold cross validated prediction accuracy on a subset of the data. These datasets involve hundreds of rules and hundreds or thousands of observations. CORELS is generally able to find the optimal rule list in a matter of seconds and certify it within about 10 minutes. We show that we are able to achieve better out-of-sample accuracy on these datasets than the popular greedy algorithms, CART and C5.0.
