--- a/paper/sections/incremental.tex
+++ b/paper/sections/incremental.tex
@@ -5,7 +5,7 @@
 
 For every prefix~$\Prefix$ evaluated during
 Algorithm~\ref{alg:branch-and-bound}'s execution, we compute
-the objective lower bound~${b(\Prefix, \x, \y)}$ and, sometimes,
+the objective lower bound~${b(\Prefix, \x, \y)}$ and sometimes
 the objective~${\Obj(\RL, \x, \y)}$ of the corresponding rule list~$\RL$.
 %
 These calculations are the dominant
